# marshmallow

./: .directory  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  NOTICE  README.rst  RELEASING.md  Untitled0.ipynb  azure-pipelines.yml  dev-requirements.txt  mypy.ini  pyproject.toml  run_tests.py  setup.cfg  setup.py  tasks.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-release.yml  scorecard.yml
conda.recipe/: meta.yaml
docs/: .gitignore  Makefile  about.rst.inc  api_reference.rst  changelog.rst  code_of_conduct.rst  conf.py  custom_fields.rst  dashing.json  deserialization.rst  ecosystem.rst  examples.rst  extending.rst  index.rst  install.rst  kudos.rst  make.bat  marshmallow.class_registry.rst  marshmallow.decorators.rst  marshmallow.error_store.rst  marshmallow.exceptions.rst  marshmallow.fields.rst  marshmallow.schema.rst  marshmallow.utils.rst  marshmallow.validate.rst  nesting.rst  quickstart.rst  requirements.txt  upgrading.rst  whos_using.rst  why.rst
docs/_static/css/: sponsor-message.css  versionwarning.css
docs/_templates/: donate.html  side-primary.html  side-secondary.html  useful-links.html
docs/_themes/: .gitignore  LICENSE  flask_theme_support.py
docs/_themes/kr/: layout.html  relations.html  theme.conf
docs/_themes/kr/static/: flasky.css_t
docs/_themes/kr_small/: layout.html  theme.conf
docs/_themes/kr_small/static/: flasky.css_t
docs/practice.py/: saialbum.py
examples/: flask_example.py  inflection_example.py  package_json_example.py  peewee_example.py  textblob_example.py
marshmallow/: __init__.py  base.py  class_registry.py  compat.py  core.py  decorators.py  error_store.py  exceptions.py  fields.py  marshalling.py  ordereddict.py  orderedset.py  schema.py  serializer.py  types.py  utils.py  validate.py  warnings.py
performance/: benchmark.py
src/marshmallow/: __init__.py  base.py  class_registry.py  compat.py  decorators.py  error_store.py  exceptions.py  fields.py  marshalling.py  ordereddict.py  orderedset.py  pyproject.toml  schema.py  types.py  utils.py  validate.py  warnings.py
tests/: base.py  conftest.py  foo_serializer.py  frozenset_field.py  shapes.py  test_decorators.py  test_deserialization.py  test_error_store.py  test_exceptions.py  test_fields.py  test_legacy.py  test_marshalling.py  test_marshmallow.py  test_one_of_schema.py  test_options.py  test_orderedset.py  test_registry.py  test_schema.py  test_serialization.py  test_serialize_only.py  test_serializer.py  test_utils.py  test_validate.py  test_version_attributes.py
tests/mypy_test_cases/: test_validation_error.py
tests/test_py3/: test_utils.py
