[metadata]
license_files = LICENSE

[bdist_wheel]
universal = 1

[flake8]
extend-ignore = E203, E266, E501, E731, B903
max-line-length = 90
max-complexity = 18
select = B,C,E,F,W,T4,B9

[tool:pytest]
norecursedirs = .git .ropeproject .tox docs env venv
addopts = -v --tb=short

[mypy]
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
