[metadata]
license_files = LICENSE

[flake8]
max-line-length = 90
max-complexity = 18
extend-ignore = E203, E266, E501, E731, B903

[tool:pytest]
norecursedirs = .git .ropeproject .tox docs env venv tests/mypy_test_cases
addopts = -v --tb=short

[mypy]
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
